2005-05-27	Istvan Varga	<istvan@csounds.com>
	* Added new API functions:
	    csoundListUtilities():
	      returns alphabetically sorted list of registered utilities
	    csoundSetUtilitiyDescription():
	      sets description text for an utility
	    csoundGetUtilitiyDescription():
	      returns description text of an utility
	    csoundRegisterDeinitCallback():
	      registers a function to be called at note deactivation
	    csoundLoadSoundFIle():
	      loads an entire sound file into memory (similar to ldmemfile())
	* Removed OENTRY.dopadr, and all related code, as it is not really
	  needed now (can use csoundModuleDestroy and RegisterDeinitCallback
	  instead).

2005-05-25	Istvan Varga	<istvan@csounds.com>
	* Engine/insert.c: fixed bug in ihold opcode
	* Engine/rdorch.c: attempts at fixing else and endif bugs
	* Added new macros (MYFLT2LONG and MYFLT2LRND) for converting
	  floating point values to integers.

2005-05-24 Victor Lazzarini <victor.lazzarini@nuim.ie>
	* changes to rtcoreaudio.c to enable channel independence

2005-05-23 Victor Lazzarini <victor.lazzarini@nuim.ie>
        * late entry to the log: added InOut/rtcoreaudio.c
        * late entry to the log: added Opcodes/sndloop.c (sndloop, flooper, pvsarp, pvsvoc)
        * late entry to the log: fixed globals in rtpa.c
        * late entry to the log: added full-duplex support to the portaudio module 
	 (rtpa.c pa_blocking.c), aimed primarily at coreaudio        

2005-05-23  Steven Yi  <stevenyi@gmail.com>

	* Engine/rdorch.c (splitline): Ported over ithen check from Csound4 source,
	added ithen to IFLABEL struct accordingly


2005-05-17  John ffitch  <jpff@codemist.co.uk>

	* Engine/swrite.c (swrite): Charge to expand "s #" and "e #" to
	"f0 #\ns"

2005-05-16  Anthony Kozar  <anthonykozar@sbcglobal.net>

	* Top/argdecode.c:
	* Top/csound.c:
	* Top/main.c:
	* Engine/filopen.c:
	* Engine/insert.c:
	* Engine/linevent.c:
	* Engine/musmon.c:  Converted mills_macintosh to mac_classic or MAC as